--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code-2020"
+name = "advent_of_code_2020"
 version = "0.1.0"
 authors = ["Eldritch Cheese <eldritch.cheese@gmail.com>"]
 edition = "2018"
@@ -8,3 +8,7 @@ edition = "2018"
 
 [dependencies]
 itertools = "*"
+
+[lib]
+name = "util"
+# path = "src/lib.rs"
