--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-itertools = "*"
 
 [lib]
 name = "util"
-# path = "src/lib.rs"
+
+[dependencies]
+itertools = "*"
+regex = "1"
